[package]
name = "towns-protocol-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
thiserror = { workspace = true }
hex = { workspace = true }
alloy-primitives = { workspace = true }
alloy-contract = { workspace = true }

[lints]
workspace = true
